# tempyrature

./: .env  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt
api/: api.py  cities.py  cities.txt  collector.py  config.py  main.py  processor.py
