[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
requests = "^2.27.1"
pymongo = "^4.1.1"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.960"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
